# vers-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release-crates.yml  release-npm.yml
src/: comparator.rs  constraint.rs  error.rs  lib.rs
src/range/: dynamic.rs  generic.rs  mod.rs  vers.rs
src/schemes/: deb.rs  mod.rs  semver.rs
www/: README.md  index.html  main.js
