[package]
name = "vers-rs"
version = "0.1.0"
repository = "https://github.com/csaf-rs/vers-rs"
keywords = ["vers"]
readme = "README.md"
edition = "2024"
description = "A library for parsing and checking version range specifiers"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "2"
percent-encoding = "2"
semver = { version = "1", features = ["serde"] }
derive_more = { version = "2", features = ["from_str", "display"] }
wasm-bindgen = "0.2.104"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
