[package]
name = "vers-rs"
version = "0.1.0"
repository = "https://github.com/csaf-rs/vers-rs"
keywords = ["vers"]
readme = "README.md"
edition = "2024"
description = "A library for parsing and checking version range specifiers"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen"]

[dependencies]
thiserror = "2"
percent-encoding = "2"
semver = { version = "1", features = ["serde"] }
derive_more = { version = "2", features = ["from_str", "display"] }
wasm-bindgen = { version = "0.2.104", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.5", optional = true }
